[tool.poetry]
name = "pyjpki"
version = "0.1.0"
description = "A Python module for JPKI (Japanese Public Key Infrastructure) operations on My Number Cards."
authors = ["Meow"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyasn1 = ">=0.4.8"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
